--- a/bot/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
+++ b/bot/admin/web/src/app/sentences-scroll/sentences-scroll.component.html
@@ -97,10 +97,10 @@
     </nb-actions>
   </div>
 
-  <tock-temp-pagination
+  <tock-pagination
     [pagination]="pagination"
     (onPaginationChange)="paginationChange()"
-  ></tock-temp-pagination>
+  ></tock-pagination>
 </div>
 <p></p>
 
