--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-sentence/sentence-training-sentence.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-sentence/sentence-training-sentence.component.html
@@ -1,5 +1,8 @@
 <div [ngClass]="{ 'px-3': !readOnly }">
-  <div class="tokens-container-wrapper">
+  <div
+    class="tokens-container-wrapper"
+    [ngClass]="{ fontSmall: fontsize === 'small' }"
+  >
     <div
       class="tokens-container"
       #tokensContainer
