--- a/bot/admin/web/src/app/intents/intents-list/intents-list.component.html
+++ b/bot/admin/web/src/app/intents/intents-list/intents-list.component.html
@@ -7,8 +7,7 @@
   <div class="table-list-entry bordered text-center">Shared Intents</div>
   <div class="table-list-entry bordered text-center">Mandatory States</div>
   <div class="table-list-entry bordered text-center">Story</div>
-  <!-- To be restored after bot/nlp merge -->
-  <!-- <div class="table-list-entry text-center">Actions</div> -->
+  <div class="table-list-entry text-center">Actions</div>
 </div>
 <div
   class="table-list"
@@ -136,8 +135,7 @@
     </button>
   </div>
 
-  <!-- To be restored after bot/nlp merge -->
-  <!-- <div class="table-list-entry bordered text-center">
+  <div class="table-list-entry bordered text-center">
     <button
       nbButton
       ghost
@@ -147,7 +145,7 @@
     >
       <nb-icon icon="book-open-outline"></nb-icon>
     </button>
-  </div> -->
+  </div>
 
   <div class="table-list-entry text-center">
     <div
