--- a/bot/admin/web/src/app/intents/intents-list/intents-list.component.scss
+++ b/bot/admin/web/src/app/intents/intents-list/intents-list.component.scss
@@ -1,8 +1,6 @@
 .table-list {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 8rem;
-  // To be restored after bot/nlp merge
-  // grid-template-columns: 2fr 1fr 1fr 1fr 1fr 8rem;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 8rem;
   column-gap: 0.5rem;
   min-width: 50rem;
 
