--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-sentence/sentence-training-sentence.component.scss
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training-sentence/sentence-training-sentence.component.scss
@@ -4,6 +4,13 @@
     line-height: 1.7em;
     font-size: 1.125rem;
   }
+  &.fontSmall {
+    overflow-x: visible;
+    .tokens-container {
+      line-height: 1.5em;
+      font-size: 0.85rem;
+    }
+  }
 }
 
 .existing-entity-selector {
