--- a/bot/admin/web/src/app/analytics/flow/flow.component.html
+++ b/bot/admin/web/src/app/analytics/flow/flow.component.html
@@ -466,7 +466,7 @@
 <div *ngIf="selectedLayout === 'Sankey'">
   <nb-card>
     <nb-card-body>
-      <google-chart
+      <!-- <google-chart
         *ngIf="flowData !== null"
         [type]="SankeyChartType"
         [data]="$any(flowData.data)"
@@ -475,7 +475,7 @@
         [dynamicResize]="true"
         style="width: 100%; height: 50vh"
       >
-      </google-chart>
+      </google-chart> -->
     </nb-card-body>
   </nb-card>
 </div>
